[package]
name = "tx-sitter"
version = "0.1.0"
edition = "2021"
authors = ["Worldcoin Crypto Team"]
description = "Service which signs and reliably submits blockchain transactions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cli-batteries = "0.4.0"

[dependencies]
clap = { version = "4.0.26", features = ["derive", "env"] }
cli-batteries = "0.4.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
thiserror = "1.0.37"
tracing = "0.1.37"
