[package]
name = "tx-sitter"
version = "0.1.0"
edition = "2021"
authors = ["Worldcoin Crypto Team"]
description = "Service which signs and reliably submits blockchain transactions"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cli-batteries = "0.4.0"
tonic-build = "0.8"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
clap = { version = "4.0.26", features = ["derive", "env"] }
cli-batteries = { version = "0.4.0", features = ["signals", "mock-shutdown"] }
ethers = { version = "1.0.2", features = ["ipc", "ws"] }
ethers-core = "1.0.2"
prost = "0.11"
rustc-hex = "2.1.0"
serde = "1.0.149"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "sqlite",
"any", "migrate"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["process", "io-util", "time"] }
tonic = "0.8"
tracing = "0.1.37"
url = "2.3.1"

[dev-dependencies]
assert_cmd = "2.0.6"
duct = "0.13.5"
predicates = "2.1.3"
timeout-readwrite = "0.3.2"
tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
