[package]
name = "tx-sitter"
version = "0.1.0"
edition = "2021"
authors = ["Worldcoin Crypto Team"]
description = "Service which signs and reliably submits blockchain transactions"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cli-batteries = "0.4.0"

[dependencies]
clap = { version = "4.0.29", features = ["derive", "env"] }
cli-batteries = { version = "0.4.0", features = ["signals", "mock-shutdown"] }
jsonrpsee = { version = "0.19.0", features = ["server", "client"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "sqlite",
"any", "migrate"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["process", "io-util", "time"] }
tracing = "0.1.37"

[dev-dependencies]
assert_cmd = "2.0.6"
duct = "0.13.5"
predicates = "2.1.3"
timeout-readwrite = "0.3.2"
tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
